# NeuroRouter

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
config/: custom-models.example.json
docs/: MOAT.md
scripts/: infer-local.ps1  one-click.ps1  release.ps1  setup-local.ps1  start-local.ps1  stop-local.ps1  warmup_model.py
src/neurorouter/: __init__.py  bootstrap.py  main.py
src/neurorouter/api/: __init__.py  routes.py  schemas.py
src/neurorouter/application/: __init__.py  instruction_parser.py  service.py
src/neurorouter/core/: __init__.py  config.py
src/neurorouter/domain/: __init__.py  entities.py  errors.py  ports.py
src/neurorouter/infrastructure/: __init__.py  hf_classifier.py  registry.py
tests/: test_api.py  test_instruction_parser.py  test_service.py
